# aoc23

./: Cargo.toml  README.md  justfile
common/: Cargo.toml
common/src/: create_day.rs  lib.rs
day_1/: Cargo.toml  README.md
day_1/src/: lib.rs  main.rs
day_10/: Cargo.toml  README.md
day_10/src/: lib.rs
day_11/: Cargo.toml  README.md
day_11/src/: lib.rs
day_12/: Cargo.toml
day_12/src/: lib.rs
day_13/: Cargo.toml  README.md
day_13/src/: lib.rs
day_14/: Cargo.toml  README.md
day_14/src/: lib.rs
day_15/: Cargo.toml
day_15/src/: lib.rs
day_16/: Cargo.toml
day_16/src/: lib.rs
day_17/: Cargo.toml  README.md
day_17/src/: lib.rs
day_18/: Cargo.toml  README.md  solution.md
day_18/src/: lib.rs
day_19/: Cargo.toml  README.md
day_19/src/: lib.rs
day_2/: Cargo.toml  README.md
day_2/src/: lib.rs  task_one.rs
day_20/: Cargo.toml  README.md
day_20/src/: lib.rs
day_21/: Cargo.toml  README.md
day_21/src/: lib.rs
day_3/: Cargo.toml
day_3/src/: lib.rs
day_4/: Cargo.toml  README.md
day_4/src/: lib.rs
day_5/: Cargo.toml  README.md
day_5/src/: lib.rs
day_6/: Cargo.toml  README.md
day_6/src/: lib.rs
day_7/: Cargo.toml
day_7/src/: lib.rs
day_8/: Cargo.toml  README.md
day_8/src/: lib.rs
day_9/: Cargo.toml  README.md
day_9/src/: lib.rs
day_template/: Cargo.toml
day_template/src/: lib.rs  main.rs
