[workspace]
members = [
    "common",
    "day_template",
    "day_1",
    "day_2",
    "day_3",
    "day_4",
]
resolver = "2"

[workspace.dependencies]
color-eyre = "0.6.2"

[workspace.dependencies.clap]
features = ["derive"]
version = "4.4.10"

[workspace.dependencies.common]
path = "common"

[workspace.dependencies.rayon]
features = []
version = "1.5.1"
