[workspace]
members = [
    "common",
    "day_template",
    "day_1",
    "day_2",
    "day_3",
    "day_4",
    "day_5",
    "day_6",
    "day_7",
    "day_8",
    "day_9",
    "day_10",
    "day_11",
    "day_12",
    "day_13",
    "day_14",
]
resolver = "2"

[workspace.dependencies]
color-eyre = "0.6.2"

[workspace.dependencies.clap]
features = ["derive"]
version = "4.4.10"

[workspace.dependencies.common]
path = "common"

[workspace.dependencies.criterion]
features = ["html_reports"]
version = "0.5.1"

[workspace.dependencies.rayon]
features = []
version = "1.5.1"
