[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
color-eyre.workspace = true
aoc-client = "0.2"
fs_extra = "1.3.0"
toml = "0.8.8"
json5 = "0.4.1"
serde_json = "1.0.68"
markdown = "1.0.0-alpha.15"

[[bin]]
name = "create_day"
path = "src/create_day.rs"
