[dependencies.color-eyre]
workspace = true

[dependencies.rayon]
workspace = true

[dependencies.common]
workspace = true

[package]
edition = "2021"
name = "day_2"
version = "0.1.0"

[lib]
name = "solution"
path = "src/lib.rs"

[[bin]]
name = "task_1"
path = "src/bin/task_1.rs"

[[bin]]
name = "task_2"
path = "src/bin/task_2.rs"
